# protoc-gen-pydantic

./: .gitignore  .golangci.yml  .goreleaser.yaml  .mise.toml  .pre-commit-config.yaml  CLAUDE.md  Justfile  LICENSE  README.md  buf.gen-cov.yaml  buf.gen.yaml  buf.yaml  go.mod  main.go  mkdocs.yml  zensical.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  coverage.yml  docs.yml  release.yml  test.yml
docs/: buf-validate.md  contributing.md  index.md  options.md  package-lock.json  package.json
docs/.vitepress/: config.mts
docs/features/: comments.md  enums.md  field-types.md  generated-model-api.md  nested-types.md  reserved-names.md  well-known-types.md
docs/guide/: installation.md  quickstart.md  with-buf.md  with-protoc.md
docs/public/: site.webmanifest
test/: .gitignore  pyproject.toml
test/api/v1/: test.proto
test/gen_options/api/v1/: _proto_types.py  collections_pydantic.py  comments_pydantic.py  custom_options_pydantic.py  enum_options_pydantic.py  enums_pydantic.py  known_types_pydantic.py  messages_pydantic.py  nested_comments_pydantic.py  oneofs_pydantic.py  reserved_names_pydantic.py  scalars_pydantic.py  self_reference_pydantic.py  types_pydantic.py  validate_pydantic.py
test/gen_options/foo/bar/v1/: cross_options_pydantic.py  cross_reference_pydantic.py
test/gen_options/partial/v1/: _proto_types.py  validate_partial_pydantic.py
test/gen_pb2/api/v1/: custom_options_pb2.py  enum_options_pb2.py  enums_pb2.py  known_types_pb2.py  nested_comments_pb2.py  reserved_names_pb2.py  self_reference_pb2.py  types_pb2.py
test/gen_pb2/foo/bar/v1/: cross_reference_pb2.py
test/proto/api/v1/: collections.proto  comments.proto  custom_options.proto  enum_options.proto  enums.proto  known_types.proto  messages.proto  nested_comments.proto  oneofs.proto  reserved_names.proto  scalars.proto  self_reference.proto  types.proto  validate.proto
test/proto/foo/bar/v1/: cross_options.proto  cross_reference.proto
test/proto/partial/v1/: validate_partial.proto
test/tests/: conftest.py  test_collections.py  test_comments.py  test_cross_options.py  test_cross_package.py  test_cross_reference.py  test_custom_options.py  test_edge_cases.py  test_enum_options.py  test_enums.py  test_generated_models.py  test_known_types.py  test_messages.py  test_nested_comments.py  test_oneofs.py  test_plugin_options.py  test_proto_json.py  test_proto_json_format.py  test_proto_types.py  test_protobuf_interop.py  test_protojson_compat.py  test_protojson_interop.py  test_reserved_names.py  test_ruff_format.py  test_scalars.py  test_self_reference.py  test_ty.py  test_types.py  test_validate.py  test_validation.py
(+2 files in other folders)
