[project]
name = "test"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "“Arata", email = "old.river.new@gmail.com" }
]
dependencies = [
    "pydantic>=2.9.2",
    "protobuf>=5.28.2",
]
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = []

[tool.uv]
managed = true

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["gen"]

[tool.pyright]
include = ["src"]
exclude = [
  "**/__pycache__",
]
venvPath = "."
venv = ".venv"
executionEnvironments = [
  { root = "./src", extraPaths = ["./src"] }
]
