[project]
name = "test"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "“Arata", email = "old.river.new@gmail.com" }
]
dependencies = [
    "pydantic>=2.9.2",
    "protobuf>=5.28.2",
]
requires-python = ">= 3.8"

[build-system]
requires = ["uv_build>=0.10.2,<0.11"]
build-backend = "uv_build"

[dependency-groups]
dev = []

[tool.uv]
managed = true

[tool.uv.build-backend]
module-name = "gen"
module-root = ""
namespace = true

[tool.pyright]
include = ["src"]
exclude = [
  "**/__pycache__",
]
venvPath = "."
venv = ".venv"
executionEnvironments = [
  { root = "./src", extraPaths = ["./src"] }
]
