[project]
name = "test"
version = "0.1.0"
description = "Test suite for protoc-gen-pydantic"
authors = [
    { name = "Arata", email = "old.river.new@gmail.com" },
    { name = "Colin Jermain" },
]
dependencies = [
    "pydantic>=2.9.2",
    "protobuf>=5.28.2",
]
requires-python = ">= 3.10"

[build-system]
requires = ["uv_build>=0.10.2,<0.11"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "ruff>=0.15.1",
    "ty>=0.0.18",
]

[tool.uv]
managed = true

[tool.uv.build-backend]
module-root = "gen"
namespace = true

[tool.ty.rules]
# Pydantic aliases (bool_, float_, bytes_, id_) are not visible to ty's static analysis
unknown-argument = "ignore"
# Pydantic **{**defaults, **overrides} kwargs spreading loses per-key type info
invalid-argument-type = "ignore"
# __doc__ is typed as str | None; unsupported-operator fires for `in __doc__` patterns
unsupported-operator = "ignore"
# Optional Pydantic fields accessed in tests where None is impossible at runtime
unresolved-attribute = "ignore"
# Protobuf read-only properties assigned in test fixtures
invalid-assignment = "ignore"
# Dynamically-loaded modules (gen_pb2) created at pytest collection time
unresolved-import = "ignore"
